src-tauri/errors_readable.txt
cargo :     Checking csi-ma
nager v1.0.1 (D:\workspace\
rust\csi-manager\src-tauri)
At line:1 char:1
+ cargo check 2> check_outp
ut_v3.txt; Get-Content chec
k_output_v3.txt - ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (     
   Checking cs...ager\sr   
 c-tauri):String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
error[E0061]: this function
 takes 4 arguments but 3 ar
guments were supplied
    --> src\lib.rs:4280:15
     |
4280 |           match back
up_database(
     |  _______________^^^^
^^^^^^^^^^^-
4281 | |             app.cl
one(),
4282 | |             state.
clone(),
4283 | |             backup
_path.to_string_lossy().to_
string(),
4284 | |         )
     | |_________- argument
 #4 of type `bool` is missi
ng
     |
note: function defined here
    --> src\lib.rs:4667:10
     |
4667 | async fn backup_data
base(
     |          ^^^^^^^^^^^
^^^^
...
4671 |     is_incremental: 
bool,
     |     ----------------
----
help: provide the argument
     |
4280 |         match backup
_database(
 ...
4283 |             backup_p
ath.to_string_lossy().to_st
ring(),
4284 ~             /* bool 
*/,
4285 ~         )
     |

error[E0061]: this function
 takes 4 arguments but 3 ar
guments were supplied
    --> src\lib.rs:4303:53
     |
4303 |   ...               
    let _ = backup_database
(
     |  ___________________
____________^^^^^^^^^^^^^^^
-
4304 | | ...               
        app.clone(),
4305 | | ...               
        state.clone(),
4306 | | ...               
        ext_backup_path.to_
string_lossy().to_string(),
4307 | | ...               
    )
     | |___________________
____- argument #4 of type `
bool` is missing
     |
note: function defined here
    --> src\lib.rs:4667:10
     |
4667 | async fn backup_data
base(
     |          ^^^^^^^^^^^
^^^^
...
4671 |     is_incremental: 
bool,
     |     ----------------
----
help: provide the argument
     |
4303 |                     
                        let
 _ = backup_database(
 ...
4306 |                     
                           
 ext_backup_path.to_string_
lossy().to_string(),
4307 ~                     
                           
 /* bool */,
4308 ~                     
                        )
     |

error[E0061]: this function
 takes 4 arguments but 3 ar
guments were supplied
    --> src\lib.rs:4475:19
     |
4475 |               match 
backup_database(
     |  ___________________
^^^^^^^^^^^^^^^-
4476 | |                 ap
p.clone(),
4477 | |                 st
ate.clone(),
4478 | |                 da
ily_path.to_string_lossy().
to_string(),
4479 | |             )
     | |_____________- argu
ment #4 of type `bool` is m
issing
     |
note: function defined here
    --> src\lib.rs:4667:10
     |
4667 | async fn backup_data
base(
     |          ^^^^^^^^^^^
^^^^
...
4671 |     is_incremental: 
bool,
     |     ----------------
----
help: provide the argument
     |
4475 |             match ba
ckup_database(
 ...
4478 |                 dail
y_path.to_string_lossy().to
_string(),
4479 ~                 /* b
ool */,
4480 ~             )
     |

error[E0061]: this function
 takes 4 arguments but 3 ar
guments were supplied
    --> src\lib.rs:4503:57
     |
4503 |   ...               
    let _ = backup_database
(
     |  ___________________
____________^^^^^^^^^^^^^^^
-
4504 | | ...               
        app.clone(),
4505 | | ...               
        state.clone(),
4506 | | ...               
        ext_backup_path.to_
string_lossy().to_string(),
4507 | | ...               
    )
     | |___________________
____- argument #4 of type `
bool` is missing
     |
note: function defined here
    --> src\lib.rs:4667:10
     |
4667 | async fn backup_data
base(
     |          ^^^^^^^^^^^
^^^^
...
4671 |     is_incremental: 
bool,
     |     ----------------
----
help: provide the argument
     |
4503 |                     
                           
 let _ = backup_database(
 ...
4506 |                     
                           
     ext_backup_path.to_str
ing_lossy().to_string(),
4507 ~                     
                           
     /* bool */,
4508 ~                     
                           
 )
     |

For more information about 
this error, try `rustc --ex
plain E0061`.
error: could not compile `c
si-manager` (lib) due to 4 
previous errors
